# FinancialAlly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
backend/: llm.py  main.py  market_data_demo.py  pyproject.toml
backend/db/: __init__.py  crud.py  database.py  schema.sql
backend/market/: __init__.py  base.py  massive.py  simulator.py
backend/routes/: chat.py  portfolio.py  stream.py  watchlist.py
backend/services/: __init__.py  portfolio.py
backend/static/: 404.html  index.html  index.txt
backend/static/_next/static/aoaCe28huqAIov7WRZiHi/: _buildManifest.js
backend/static/_next/static/chunks/: 255-6ab3e064d17002d6.js  554-460af9c8832e103c.js  main-633ce4604354f893.js  main-app-f8aa3af0c232d757.js
backend/static/_next/static/chunks/app/: layout-f6c87df21b584bd4.js  page-c5d8009dc23221eb.js
backend/static/_next/static/chunks/app/_not-found/: page-c27a600df8d57c8f.js
backend/static/_next/static/css/: 51fdbc15bac3b454.css
backend/tasks/: __init__.py  snapshots.py
backend/tests/: test_chat.py  test_crud.py  test_database.py  test_llm.py  test_main.py  test_massive.py  test_portfolio.py  test_provider_interface.py  test_simulator.py  test_stream.py  test_watchlist.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
planning/: MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md  MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_API.md  PLAN.md  REVIEW.md
(+51 files in other folders)
